--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h6 {
 }
 
 .navbar-mobile ul {
-  display: block;
+  display: inline-block;
   position: absolute;
   top: 55px;
   right: 15px;
@@ -347,7 +347,7 @@ h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-    width: 50%;
+    width: 100%;
     height: auto;
   position: relative;
   background: url("../img/hero-bg.png") center bottom no-repeat;
