--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ h6 {
   font-size: 36px;
   margin: 0;
   padding: 0;
+  padding-top: 5px;
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
